# Basic-CRUD-Service-Python

./: .env.example  .gitignore  DB_INIT_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py  config.py
src/api/: dependencies.py
src/api/routes/: __init__.py  admin.py  employees.py  users.py
src/core/: app.py
src/database/: __init__.py  init_db.py  models.py  session.py
src/schemas/: __init__.py  employee.py  user.py
