[tool.poetry]
name = "basic-crud-service-python"
version = "0.1.0"
description = ""
authors = ["Sergei Popov <p.sergey_n@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.2.1"
uvicorn = "^0.38.0"
fastapi = "^0.121.0"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
pydantic = "^2.12.4"
email-validator = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
